@@ -2,6 +2,7 @@ Version next
 * Re-write status pop-up binding to support Firefox 12+.
 * Tear down S4E bindings on window destruction. I don't know of there being any reported memory leaks, so this is a 'just in case' measure.
 * Disable domain highlighting when showing links/status in the location bar.
+* Properly reset the download button when entering and exiting private browsing mode.
 
 Version 2012.01.14.17
 * Fix the mock location bar in the preference window.
